--- a/apps/infrastructure-integration.yaml
+++ b/apps/infrastructure-integration.yaml
@@ -32,7 +32,7 @@ spec:
       project: default
       destination:
         name: ''
-        namespace: '{{.name}}'
+        namespace: 'infrastructure-{{.name}}'
         server: 'https://kubernetes.default.svc'
       sources:
       - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
