--- a/mgmt/edge-k8s-clusters.yaml
+++ b/mgmt/edge-k8s-clusters.yaml
@@ -1,123 +1,372 @@
 key:
   clusters:
-    - name: crimson-dev01
+    - name: littlelab1dev-01
       version: v1.27.4
-      cluster: crimson
-      prismcentral: crimson-pc
-      subnet: phx-routed-55-IPAM
-      controlplane_ip: 10.48.38.31
-    - name: crimson-dev02
+      controlplane_ip: 10.50.28.6
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-02
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.32
-    - name: crimson-dev03
+      controlplane_ip: 10.50.28.7
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-03
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.33
-    - name: crimson-dev04
+      controlplane_ip: 10.50.28.8
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-04
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.34
-    - name: crimson-dev05
+      controlplane_ip: 10.50.28.9
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-05
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.35
-    - name: crimson-dev06
+      controlplane_ip: 10.50.28.10
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-06
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.36
-    - name: crimson-dev07
+      controlplane_ip: 10.50.28.11
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-07
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.37
-    - name: crimson-dev08
+      controlplane_ip: 10.50.28.12
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-08
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.38
-    - name: crimson-dev09
+      controlplane_ip: 10.50.28.13
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-09
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.39
-    - name: crimson-dev10
+      controlplane_ip: 10.50.28.14
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1    
+    - name: littlelab1dev-10
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.40
- 
-    - name: crimson-dev11
+      controlplane_ip: 10.50.28.15
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-11
       version: v1.27.4
-      cluster: crimson
-      prismcentral: crimson-pc
-      subnet: phx-routed-55-IPAM
-      controlplane_ip: 10.48.38.90
-    - name: crimson-dev12
+      controlplane_ip: 10.50.28.16
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-12
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.91
-    - name: crimson-dev13
+      controlplane_ip: 10.50.28.17
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-13
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.92
-    - name: crimson-dev14
+      controlplane_ip: 10.50.28.18
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-14
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.93
-    - name: crimson-dev15
+      controlplane_ip: 10.50.28.19
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+    - name: littlelab1dev-15
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.94
-    - name: crimson-dev16
+      controlplane_ip: 10.50.28.20
+      cluster: cluster1
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster1
+
+
+
+    - name: littlelab1dev-16
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.95
-    - name: crimson-dev17
+      controlplane_ip: 10.50.28.21
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-17
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.96
-    - name: crimson-dev18
+      controlplane_ip: 10.50.28.22
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-18
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.97
-    - name: crimson-dev19
+      controlplane_ip: 10.50.28.23
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-19
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.98
-    - name: crimson-dev20
+      controlplane_ip: 10.50.28.24
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-20
       version: v1.27.4
-      cluster: crimson
-      subnet: phx-routed-55-IPAM
-      prismcentral: crimson-pc
-      controlplane_ip: 10.48.38.99
+      controlplane_ip: 10.50.28.25
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-21
+      version: v1.27.4
+      controlplane_ip: 10.50.28.26
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-22
+      version: v1.27.4
+      controlplane_ip: 10.50.28.27
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-23
+      version: v1.27.4
+      controlplane_ip: 10.50.28.28
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-24
+      version: v1.27.4
+      controlplane_ip: 10.50.28.29
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2    
+    - name: littlelab1dev-25
+      version: v1.27.4
+      controlplane_ip: 10.50.28.30
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-26
+      version: v1.27.4
+      controlplane_ip: 10.50.28.31
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-27
+      version: v1.27.4
+      controlplane_ip: 10.50.28.32
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-28
+      version: v1.27.4
+      controlplane_ip: 10.50.28.33
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-29
+      version: v1.27.4
+      controlplane_ip: 10.50.28.34
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+    - name: littlelab1dev-30
+      version: v1.27.4
+      controlplane_ip: 10.50.28.35
+      cluster: cluster2
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster2
+
+
+
+    - name: littlelab1dev-01
+      version: v1.27.4
+      controlplane_ip: 10.50.29.6
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-02
+      version: v1.27.4
+      controlplane_ip: 10.50.29.7
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-03
+      version: v1.27.4
+      controlplane_ip: 10.50.29.8
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-04
+      version: v1.27.4
+      controlplane_ip: 10.50.29.9
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-05
+      version: v1.27.4
+      controlplane_ip: 10.50.29.10
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-06
+      version: v1.27.4
+      controlplane_ip: 10.50.29.11
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-07
+      version: v1.27.4
+      controlplane_ip: 10.50.29.12
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-08
+      version: v1.27.4
+      controlplane_ip: 10.50.29.13
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-09
+      version: v1.27.4
+      controlplane_ip: 10.50.29.14
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3    
+    - name: littlelab1dev-10
+      version: v1.27.4
+      controlplane_ip: 10.50.29.15
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-11
+      version: v1.27.4
+      controlplane_ip: 10.50.29.16
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-12
+      version: v1.27.4
+      controlplane_ip: 10.50.29.17
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-13
+      version: v1.27.4
+      controlplane_ip: 10.50.29.18
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-14
+      version: v1.27.4
+      controlplane_ip: 10.50.29.19
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+    - name: littlelab1dev-15
+      version: v1.27.4
+      controlplane_ip: 10.50.29.20
+      cluster: cluster3
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster3
+
+
+
+    - name: littlelab1dev-16
+      version: v1.27.4
+      controlplane_ip: 10.50.29.21
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-17
+      version: v1.27.4
+      controlplane_ip: 10.50.29.22
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-18
+      version: v1.27.4
+      controlplane_ip: 10.50.29.23
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-19
+      version: v1.27.4
+      controlplane_ip: 10.50.29.24
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-20
+      version: v1.27.4
+      controlplane_ip: 10.50.29.25
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-21
+      version: v1.27.4
+      controlplane_ip: 10.50.29.26
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-22
+      version: v1.27.4
+      controlplane_ip: 10.50.29.27
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-23
+      version: v1.27.4
+      controlplane_ip: 10.50.29.28
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-24
+      version: v1.27.4
+      controlplane_ip: 10.50.29.29
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4    
+    - name: littlelab1dev-25
+      version: v1.27.4
+      controlplane_ip: 10.50.29.30
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-26
+      version: v1.27.4
+      controlplane_ip: 10.50.29.31
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-27
+      version: v1.27.4
+      controlplane_ip: 10.50.29.32
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-28
+      version: v1.27.4
+      controlplane_ip: 10.50.29.33
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-29
+      version: v1.27.4
+      controlplane_ip: 10.50.29.34
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+    - name: littlelab1dev-30
+      version: v1.27.4
+      controlplane_ip: 10.50.29.35
+      cluster: cluster4
+      prismcentral: littlelab1
+      subnet: vlan.145-cluster4
+      
