--- a/common-helm-charts/crossplane-infrastructure/provider/templates/namespace.yaml
+++ b/common-helm-charts/crossplane-infrastructure/provider/templates/namespace.yaml
@@ -3,4 +3,4 @@ kind: Namespace
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-20"
-  name: {{ .Values.cluster.name }}
+  name: infrastructure-{{ .Values.cluster.name }}
