--- a/workload/demo.yaml
+++ b/workload/demo.yaml
@@ -31,18 +31,27 @@ spec:
         memory: 128Mi
       type: Container
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: cpu-demo
+  name: cpu-demo-deployment
   namespace: demo
 spec:
-  containers:
-  - name: cpu-demo-ctr
-    image: quay.io/heetch/stress
-    args:
-    - --cpu
-    - "2"
+  replicas: 1
+  selector:
+    matchLabels:
+      app: cpu-demo
+  template:
+    metadata:
+      labels:
+        app: cpu-demo
+    spec:
+      containers:
+      - name: cpu-demo-ctr
+        image: quay.io/heetch/stress
+        args:
+        - --cpu
+        - "2"
 # ---
 # apiVersion: v1
 # kind: Service
