--- a/apps/capxonly-integration.yaml
+++ b/apps/capxonly-integration.yaml
@@ -10,7 +10,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/wolfganghuse/edge-k8s-argocd.git
-          revision: littlelab1-demo
+          revision: littlelab1-large-1.26
           files:
           - path: mgmt/edge-k8s-clusters.yaml
       - list:
@@ -102,7 +102,9 @@ spec:
                   mirror: harbor.infrastructure.dachlab.net/v2/gcr.io
                   override_path: true                  
                 csi:
-                  storageContainer: k8s
+                  enable_csi2: false
+                  enable_csi3: true
+                  storageContainer: SelfServiceContainer
                 ccm:
                   image:
                     repository: harbor.infrastructure.dachlab.net/nutanix-dev/nutanix-cloud-controller-manager
