--- a/workload/wordpress/values.yaml
+++ b/workload/wordpress/values.yaml
@@ -2,12 +2,15 @@
 wordpressUsername: "admin" 
 wordpressPassword: "nutanix/4u" 
 wordpressBlogName: "Welcome to Nutanix on Openshift Demos" 
-replicaCount: "2" 
+replicaCount: "1" 
+# replicaCount: "2" 
 service:
   type: "ClusterIP" 
 persistence:
-  storageClass: "nutanix-dynamicfile" 
-  accessModes: {"ReadWriteMany"} 
+  storageClass: "nutanix-volume" 
+  accessModes: {"ReadWriteOnce"} 
+  # storageClass: "nutanix-dynamicfile" 
+  # accessModes: {"ReadWriteMany"} 
 mariadb:
   architecture: "replication" 
   auth:
