--- a/workload/wordpress/values.yaml
+++ b/workload/wordpress/values.yaml
@@ -19,11 +19,11 @@ mariadb:
   primary:
     persistence:
       storageClass: "nutanix-volume" 
-      accessModes: "ReadWriteOnce" 
+      accessModes: {"ReadWriteOnce"} 
   secondary:
     persistence:
       storageClass: "nutanix-volume" 
-      accessModes: "ReadWriteOnce"
+      accessModes: {"ReadWriteOnce"} 
 containerSecurityContext:
   allowPrivilegeEscalation: true 
 serviceAccount:
