--- a/workload/wordpress/values.yaml
+++ b/workload/wordpress/values.yaml
@@ -4,14 +4,13 @@ wordpressPassword: "nutanix/4u"
 wordpressBlogName: "Welcome to Nutanix on Openshift Demos" 
 replicaCount: "1" 
 # replicaCount: "2" 
-service:
-  type: "ClusterIP" 
 persistence:
   storageClass: "nutanix-volume" 
   accessModes: 
   - "ReadWriteOnce"
   # storageClass: "nutanix-dynamicfile" 
-  # accessModes: {"ReadWriteMany"} 
+  # accessModes:
+  # - "ReadWriteMany"
 mariadb:
   architecture: "replication" 
   auth:
@@ -31,4 +30,4 @@ containerSecurityContext:
   allowPrivilegeEscalation: true 
 serviceAccount:
   create: "true" 
-  name: "wordpress-sa" 
+  name: "wordpress-sa"
