--- a/apps/full-integration.yaml
+++ b/apps/full-integration.yaml
@@ -18,7 +18,7 @@ spec:
           elementsYaml: "{{ .key.clusters | toJson }}"
   template:
     metadata:
-      name: '{{.name}}-fullintegration'
+      name: '{{.name}}'
       labels: 
         cd-component: capx
         environment: '{{.name}}'
@@ -32,7 +32,7 @@ spec:
       project: default
       destination:
         name: ''
-        namespace: '{{.name}}-fullintegration'
+        namespace: '{{.name}}'
         server: 'https://kubernetes.default.svc'
       sources:
       # - repoURL: 'https://github.com/wolfganghuse/edge-k8s-argocd'
