--- a/mgmt/prismcentral.yaml
+++ b/mgmt/prismcentral.yaml
@@ -1,6 +1,5 @@
 key:
   prismcentral:
-    - name: littlelab1
-      subnet: vlan.145-cluster1
+    - name: blaze
     # - name: littlelab2
     #   subnet: vlan.145-cluster3
